# Created by Claude Code on 2025-10-28
# Purpose: Package configuration for markdown2pdf CLI tool
# Context: Defines package metadata, dependencies, and console script entry point

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown2pdf"
version = "0.1.0"
description = "A classy Markdown to PDF converter"
requires-python = ">=3.10"
dependencies = [
    "weasyprint>=60.0",
    "markdown>=3.5",
    "pygments>=2.17",
    "click>=8.1",
]

[project.scripts]
md2pdf = "md2pdf.cli:main"
